# two-wasm-modules-test

./: Cargo.toml
lib1/: Cargo.toml
lib1/src/: lib.rs
lib2/: Cargo.toml
lib2/src/: lib.rs
src/: main.rs
static/: index.html  run_node.js
