[workspace]
members = ["lib1", "lib2"]

[package]
name = "serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.20"
mime_guess = "2.0"
rust-embed = "8.0.0"
serde = "1.0.189"
tokio = { version = "1.29.0", features = ["macros", "rt-multi-thread"] }
